corpus/foreach.txt
==================================
Empty foreach loop [foreach]
==================================

foreach(var)
endforeach()

---

(source_file
 (foreach_loop
  (foreach_command
    (foreach)
    (paren_argument
     (argument (unquoted_argument))
    )
  )
  (endforeach_command (endforeach) (opt_argument))
 )
 )

===============================================================
Empty foreach loop with one argument endforeach [foreach]
===============================================================

foreach(var)
endforeach(var)

---

(source_file
 (foreach_loop
  (foreach_command
    (foreach)
    (paren_argument
     (argument (unquoted_argument))
    )
  )
  (endforeach_command
    (endforeach)
    (opt_argument
     (argument (unquoted_argument))
    )
  )
 ))

=================================
Uppercase foreach [foreach]
=================================

FOREACH(var)
ENDFOREACH()

---

(source_file
 (foreach_loop
  (foreach_command
    (foreach)
    (paren_argument
     (argument (unquoted_argument))
    )
  )
  (endforeach_command (endforeach) (opt_argument))
 )
 )

==================================
Mixed case foreach [foreach]
==================================

forEach(var)
endForEach()

---

(source_file
 (foreach_loop
  (foreach_command
    (foreach)
    (paren_argument
     (argument (unquoted_argument))
    )
  )
  (endforeach_command (endforeach) (opt_argument))
 )
 )

==================================
Empty IN [foreach]
==================================

foreach(var IN)
endforeach()

---

(source_file
 (foreach_loop
  (foreach_command
    (foreach)
    (paren_argument
     (argument (unquoted_argument))
     (argument (unquoted_argument))
    )
  )
  (endforeach_command (endforeach) (opt_argument))
 )
 )

==================================
Empty RANGE [foreach]
==================================

foreach(var RANGE)
endforeach()

---

(source_file
 (foreach_loop
  (foreach_command
    (foreach)
    (paren_argument
     (argument (unquoted_argument))
     (argument (unquoted_argument))
    )
  )
  (endforeach_command (endforeach) (opt_argument))
 )
 )
