corpus/message.txt
=====================
No argument [message]
=====================

message()

---

(source_file
 (normal_command
  (identifier)
  (paren_argument)
 )
 )

=================================
No argument with spaces [message]
=================================

message( )

---

(source_file
 (normal_command
  (identifier)
  (paren_argument)
 )
 )

===============================================
Message without argument with newline [message]
===============================================

message(

)

---

(source_file
 (normal_command
  (identifier)
  (paren_argument)
 )
 )

==================================================
Message with STATUS and bracket argument [message]
==================================================

message(STATUS [=[Some argument ]==] ]=] )

---

(source_file
 (normal_command
  (identifier)
  (paren_argument
   (argument (unquoted_argument))
   (argument (bracket_argument))
  )
 )
 )

==============================================================
Message with STATUS and bracket argument and newline [message]
==============================================================

message(STATUS
[=[Some argument
]==] ]=] )

---

(source_file
 (normal_command
  (identifier)
  (paren_argument
   (argument (unquoted_argument))
   (argument (bracket_argument))
  )
 )
 )

======================================================
Message with STATUS and an unquoted argument [message]
======================================================

message(STATUS argument)

---

(source_file
 (normal_command
  (identifier)
  (paren_argument
   (argument (unquoted_argument))
   (argument (unquoted_argument))
  )
 )
 )
