corpus/while.txt
===================
Empty while [while]
===================

while(cond)
endwhile()

---

(source_file
  (while_loop
    (while_command
      (while)
      (paren_argument
        (argument (unquoted_argument))
      )
    )
    (endwhile_command (endwhile) (opt_argument))
  )
)

============================================
Empty while with argument in endwhile[while]
============================================

while(cond)
endwhile(cond)

---

(source_file
  (while_loop
    (while_command
      (while)
      (paren_argument
        (argument (unquoted_argument))
      )
    )
    (endwhile_command 
      (endwhile)
      (opt_argument
        (argument (unquoted_argument))
      )
    )
  )
)
