test/corpus/message.txt
=====================
No argument [message]
=====================

message()

---

(source_file
  (normal_command
    (identifier)))

=================================
No argument with spaces [message]
=================================

message( )

---

(source_file
  (normal_command
    (identifier)
    (argument_list)))

===============================================
Message without argument with newline [message]
===============================================

message(

)

---

(source_file
  (normal_command
    (identifier)
    (argument_list)))

==================================================
Message with STATUS and bracket argument [message]
==================================================

message(STATUS [=[Some argument ]==] ]=] )

---

(source_file
  (normal_command
    (identifier)
    (argument_list
      (argument
        (unquoted_argument))
      (argument
        (bracket_argument
          (bracket_argument_open)
          (bracket_argument_content)
          (bracket_argument_close))))))

==============================================================
Message with STATUS and bracket argument and newline [message]
==============================================================

message(STATUS
[=[Some argument
]==] ]=] )

---

(source_file
  (normal_command
    (identifier)
    (argument_list
      (argument
        (unquoted_argument))
      (argument
        (bracket_argument
          (bracket_argument_open)
          (bracket_argument_content)
          (bracket_argument_close))))))

======================================================
Message with STATUS and an unquoted argument [message]
======================================================

message(STATUS argument)

---

(source_file
  (normal_command
    (identifier)
    (argument_list
      (argument
        (unquoted_argument))
      (argument
        (unquoted_argument)))))
